# webimpactshow

./: .gitignore  .replit  CHARIOW_INTEGRATION.md  README.md  about.html  admin.html  admin_login.html  app.py  base.html  dashboard.html  index.html  laureates.html  payment_confirm.html  pyproject.toml  replit.md  select_package.html  stats_history.html  vote_success.html  webimpact.db
templates/: base.html  register.html
